make less invisible when not active/hovered, prevent layout shift when adding hover bars

--- a/styles/global.css
+++ b/styles/global.css
@@ -189,7 +189,7 @@ ul.narrow {
 #rylab {
   color: #222;
   margin: 0px auto;
-  opacity: 0.1;
+  opacity: 0.2;
   padding-top: 17px;
   transition: 0.8s;
 }
@@ -201,16 +201,18 @@ ul.narrow {
 }
 
 #saxylab a {
-  color: rgb(8, 27, 0);
-  margin: 0px auto;
-  opacity: 0.1;
-  padding-top: 17px;
+  border-bottom: 2px transparent;
+  color: #1d5d00;
+  display: inline-block;
+  margin: 15px auto 5px auto;
+  opacity: 0.4;
+  padding-top: 5px;
   transition: 0.42s;
   transition-timing-function: ease;
 }
-  #saxylab a:hover {
+  #saxylab a:active {
     cursor: all-scroll;
-    color: rgb(5, 160, 0);
+    color: rgb(107, 221, 103);
     opacity: 1.0;
     transition: 0.2s;
   }
